--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.SendMe"
         tools:targetApi="31">
         <activity
-            android:name=".app.LoginActivity"
+            android:name=".core.authentication.view.LoginActivity"
             android:windowSoftInputMode="adjustResize"
             android:exported="true">
             <intent-filter>
